--- a/package.json
+++ b/package.json
@@ -7,19 +7,27 @@
     "dev": "vite",
     "build": "tsc && vite build",
     "lint": "eslint -c .eslintrc.json ./src/**/**/*.{ts,tsx} --fix",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "format": "npm run format"
   },
   "dependencies": {
     "@heroui/button": "2.2.17",
+    "@heroui/card": "^2.2.16",
     "@heroui/code": "2.2.12",
     "@heroui/dropdown": "2.3.17",
+    "@heroui/form": "^2.1.16",
+    "@heroui/image": "^2.2.10",
     "@heroui/input": "2.4.17",
     "@heroui/kbd": "2.2.13",
     "@heroui/link": "2.2.14",
+    "@heroui/modal": "^2.2.14",
     "@heroui/navbar": "2.2.15",
+    "@heroui/pagination": "^2.2.15",
     "@heroui/snippet": "2.2.18",
+    "@heroui/spinner": "^2.2.14",
     "@heroui/switch": "2.2.15",
     "@heroui/system": "2.4.13",
+    "@heroui/table": "^2.2.16",
     "@heroui/theme": "2.4.13",
     "@heroui/use-theme": "2.1.6",
     "@react-aria/visually-hidden": "3.8.21",
@@ -34,7 +42,7 @@
   },
   "devDependencies": {
     "@types/node": "20.5.7",
-    "@types/react": "18.3.3",
+    "@types/react": "^18.3.20",
     "@types/react-dom": "18.3.0",
     "@typescript-eslint/eslint-plugin": "8.11.0",
     "@typescript-eslint/parser": "8.11.0",
